# FresnelInterference

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.sh
src/: MainWindow.cpp
src/app/: MainWindow.cpp  MainWindow.h  main.cpp
src/demo/: camera_calib.cpp
src/demos/: camera_calib.cpp  camera_test.cpp
src/io/: FrameManager.cpp  FrameManager.h  ImageInput.cpp  ImageInput.h  MVCameraInput.cpp  MVCameraInput.h  StaticImageInput.cpp  StaticImageInput.h  VideoInput.cpp
src/utils/: QtCvUtils.cpp  QtCvUtils.h
src/widgets/: AnalysisModule.cpp  AnalysisModule.h  CameraControlWidget.cpp  CameraControlWidget.h  CircleDetectionProcessor.cpp  CircleDetectionProcessor.h  CircleDetectionWidget.cpp  CircleDetectionWidget.h  FringeAnalysisWidget.cpp  FringeAnalysisWidget.h  ImageSpacingWidget.cpp  ImageSpacingWidget.h  InputControlWidget.cpp  InputControlWidget.h
